--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 body { 
   color: #f3eded;
   background: #20252c;
@@ -10,18 +6,28 @@ body {
   padding: 0;
 }
 .container {
-  margin: 0;
+  max-width: 100%;
   padding: 20px;
-}
-.container {
-  border: 0.5px solid #f3eded;
+  margin: 10%;
+  box-sizing: border-box; 
+  border: 1px solid #f3eded;
   border-radius: 15px;
   background: #393e4477;
+  }
+/* .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #f3eded;
+  border-radius: 15px;
+  padding: 20px;
+  margin: 20px 10% 20px 10%;
+  background: #393e4477;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-  margin: 20px;
-}
+} */
 /* SECTION HOME */
 .img-bg {
+  z-index: -2;
   background-image: url('https://images.unsplash.com/photo-1542831371-32f555c86880?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNvZGlnbyUyMGRlJTIwcHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww&w=1000&q=80');
   background-size: cover;
   background-position: center;
@@ -29,6 +35,7 @@ body {
   height: 100vh; 
 }
 .img-bg::before{
+  z-index: 0;
   content: "";
   background-color: rgba(0, 0, 0, 0.6);
   position: absolute;
@@ -40,20 +47,19 @@ body {
 }
 
 .navbar {
-  z-index: 10;
+  z-index: -1;
 }
 .navbar ul {
-  z-index: 10;
   margin: 0;
   padding: 0;
 }
 .navbar li {
-  z-index: 10;
   display: inline;
   margin-right: 10px;
 }
 
 .home-class {
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,19 +67,13 @@ body {
   text-align: center;
   text-align: center;
   color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .home-class h1 {
-  z-index: 1;
   margin: 0;
   font-size: 2rem; 
 }
 .home-class p {
-  z-index: 1;
   margin-top: 10px;
   font-size: 1.2rem; 
 }
@@ -90,14 +90,12 @@ section {
   height: 100vh;
 }
 .button-container {
-  z-index: 1;
   margin-top: 5%;
 }
 a {
   text-decoration: none;
   color: inherit
 } 
-
 
 .projects {
   margin-top: 30px;
@@ -116,41 +114,6 @@ footer {
   text-align: center;
   padding: 10px 0;
 }
-
-/* SECTION BIOGRAPHY */
-
-.biography-section {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
-  box-sizing: border-box;
-}
-.biography-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.biography-image img{
-  flex: 1;
-  max-width: 414px;
-  height: auto;
-}
-.biography-description {
-  flex: 1;
-  max-width: 50%;
-}
-
- @media (max-width: 700px) {
-  .biography-section {
-    flex-direction: column;
-    align-items: center;
-  }
-  .biography-image {
-    margin-bottom: 20px;
-    max-width: 100%;
-  }
- }
 
 
 /* SECTION PROJECTS */
