--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1,3 +1,6 @@
+.App section, nav{
+  margin: 0 10rem;
+}
 body { 
   color: #f3eded;
   background: #20252c;
@@ -8,26 +11,13 @@ body {
 .container {
   max-width: 100%;
   padding: 20px;
-  margin: 10%;
   box-sizing: border-box; 
   border: 1px solid #f3eded;
   border-radius: 15px;
   background: #393e4477;
-  }
-/* .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #f3eded;
-  border-radius: 15px;
-  padding: 20px;
-  margin: 20px 10% 20px 10%;
-  background: #393e4477;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-} */
-/* SECTION HOME */
+}
+
 .img-bg {
-  z-index: -2;
   background-image: url('https://images.unsplash.com/photo-1542831371-32f555c86880?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNvZGlnbyUyMGRlJTIwcHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww&w=1000&q=80');
   background-size: cover;
   background-position: center;
@@ -35,57 +25,28 @@ body {
   height: 100vh; 
 }
 .img-bg::before{
-  z-index: 0;
   content: "";
   background-color: rgba(0, 0, 0, 0.6);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   height: 100vh;
 }
 
-.navbar {
-  z-index: -1;
-}
 .navbar ul {
+  display: flex;
   margin: 0;
-  padding: 0;
+  padding: 20px 0;
 }
 .navbar li {
   display: inline;
   margin-right: 10px;
 }
 
-.home-class {
+.navbar li {
   z-index: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  text-align: center;
-  color: #ffffff;
 }
-
-.home-class h1 {
-  margin: 0;
-  font-size: 2rem; 
-}
-.home-class p {
-  margin-top: 10px;
-  font-size: 1.2rem; 
-}
-.home-class button { 
-  border: none;
-  color: inherit;
-  font: inherit;
-  padding: 15px 50px 15px 50px;
-  cursor: pointer;
-  background-color: rgb(74, 49, 218);
-}
-
 section {
   height: 100vh;
 }
@@ -97,24 +58,13 @@ a {
   color: inherit
 } 
 
-.projects {
-  margin-top: 30px;
-}
-
-.project {
-  background-color: #0a0a0a49;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(221, 214, 214, 0.3);
-}
-
 footer {
   color: #000000;
   text-align: center;
   padding: 10px 0;
 }
-
-
-/* SECTION PROJECTS */
-/* SECTION SITES */
+@media (max-width: 768px) {
+  .App section, nav{
+    margin: 0 5rem;
+  }
+}
