--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1,4 +1,4 @@
-.App section, nav{
+.App section {
   margin: 0 10rem;
 }
 body { 
@@ -13,15 +13,13 @@ body {
   padding: 20px;
   box-sizing: border-box; 
   border: 1px solid #f3eded;
-  border-radius: 15px;
-  background: #393e4477;
+  background: #393e44;
 }
-
 .img-bg {
   background-image: url('https://images.unsplash.com/photo-1542831371-32f555c86880?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNvZGlnbyUyMGRlJTIwcHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww&w=1000&q=80');
   background-size: cover;
   background-position: center;
-  background-attachment: fixed; 
+  background-attachment: fixed;
   height: 100vh; 
 }
 .img-bg::before{
@@ -33,7 +31,11 @@ body {
   width: 100%;
   height: 100vh;
 }
-
+.navbar {
+  display: block;
+  background: #00000085;
+  padding: 0 60px;
+}
 .navbar ul {
   display: flex;
   margin: 0;
