--- a/my-portfolio/src/components/projects/Project.css
+++ b/my-portfolio/src/components/projects/Project.css
@@ -7,7 +7,6 @@
 }
 .card {
     border: 1px solid #ccc;
-    padding: 20px;
     overflow: auto;
 }
 .card img {
@@ -51,6 +50,9 @@
     z-index: 999;
 }
 
-@media (min-width: 1134px) {
-     
+@media (max-width: 1200px) {
+    .project-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
