--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1,5 +1,12 @@
 .App section {
   margin: 0 10rem;
+  font-family: 'Space Mono', monospace;
+}
+h1 {
+  font-family: 'Archivo Black', sans-serif;
+}
+h2 {
+  font-family: 'Archivo Black', sans-serif;
 }
 body { 
   color: #f3eded;
@@ -32,6 +39,7 @@ body {
   height: 100vh;
 }
 .navbar {
+    font-family: 'Space Mono', monospace;
   display: block;
   background: #00000085;
   padding: 0 60px;
@@ -52,9 +60,6 @@ body {
 section {
   min-height: 100vh;
 }
-.button-container {
-  margin-top: 5%;
-}
 a {
   text-decoration: none;
   color: inherit
@@ -66,7 +71,7 @@ footer {
   padding: 10px 0;
 }
 @media (max-width: 768px) {
-  .App section, nav{
+  /* .App section, nav{
     margin: 0 5rem;
-  }
+  } */
 }
