--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -51,4 +51,7 @@ body {
   .App section, nav{
     margin: 0;
   }
+  .img-bg {
+    background-image: url('https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/bgs%2Fbackground-home-mobile.jpg?alt=media&token=145cfcf0-6642-4ba3-8aef-908057d614c7');
+  }
 }
