--- a/my-portfolio/src/components/projects/Project.css
+++ b/my-portfolio/src/components/projects/Project.css
@@ -1,10 +1,9 @@
 .background {
-    background-image: url('https://static5.depositphotos.com/1015682/520/i/450/depositphotos_5206904-stock-photo-binary-code-on-pixellated-screen.jpg');
+    background-image: url('https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/bgs%2Fbackground-projects-desktop.jpg?alt=media&token=53838f4f-0eaf-49ae-9ee7-47dd7e80948e');
     background-size: cover;
     background-position: center;
-    height: 100%; 
-    padding: 20px 0;
     background-attachment: fixed;
+    padding: 20px 0;
 }
 .project-container {
     color: #ffffff;
@@ -14,7 +13,6 @@
     margin: 10%;
 }
 .card {
-    border: 1px solid #ccc;
     overflow: auto;
     min-width: 375px;
     max-width: 600px;
@@ -53,6 +51,13 @@
     z-index: 999;
 }
 
+@media (max-width: 767px) {
+    .background {
+        background-image: url('https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/bgs%2Fbg-binario.png?alt=media&token=fd3fa255-cff2-45a3-8af8-1b51f2496a34');
+        background-size: contain;
+    }
+}
+
 @media (max-width: 900px) {
     .project-container {
         display: grid;
@@ -62,8 +67,5 @@
         min-width: 200px;
         max-width: 400px;
         margin: auto;
-    }
-    .background {
-        background-image: url('https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/bgs%2Fbackground-projects-mobile.jpg?alt=media&token=dbb4110e-302a-4328-b904-27fcf16a5ae2');
     }
 }
