--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -40,15 +40,21 @@ body {
 }
 .navbar {
   font-family: 'Space Mono', monospace;
-  background: #000000b9;
+  background:#000000b9;
   padding: 0 0px;
   position: fixed;
   z-index: 2;
 }
+.navbar:hover {
+  background: rgb(23, 41, 141);
+}
 
-@media (max-width: 1000px) {
+@media (max-width: 767px) {
   .App section, nav{
     margin: 0;
+  }
+  .navbar {
+    background-color: rgb(23, 41, 141);
   }
   .img-bg {
     background-image: url('https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/bgs%2Fbackground-home-mobile.jpg?alt=media&token=145cfcf0-6642-4ba3-8aef-908057d614c7');
