--- a/my-portfolio/src/components/projects/Project.css
+++ b/my-portfolio/src/components/projects/Project.css
@@ -3,14 +3,13 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    padding: 20px 0;
 }
 .project-container {
     color: #ffffff;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    margin: 10%;
+    padding: 10px 10px;
 }
 .card {
     overflow: auto;
@@ -24,6 +23,10 @@
     width: 100%;
     height: auto;
 }
+.card:hover img{
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+  }
 
 .project-detail {
     position: fixed;
@@ -51,13 +54,12 @@
     z-index: 999;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .background {
         background-image: url('https://firebasestorage.googleapis.com/v0/b/portfolio-personal-dac18.appspot.com/o/bgs%2Fbg-binario.png?alt=media&token=fd3fa255-cff2-45a3-8af8-1b51f2496a34');
         background-size: contain;
     }
 }
-
 @media (max-width: 900px) {
     .project-container {
         display: grid;
@@ -69,3 +71,5 @@
         margin: auto;
     }
 }
+
+
